--- a/configs.dev.env
+++ b/configs.dev.env
@@ -31,6 +31,9 @@ GR__CORE__GAME__SPACE_FIELD__ASTEROID_MIN_MASS="5"
 GR__CORE__GAME__SPACE_FIELD__ASTEROID_MAX_MASS="10"
 GR__CORE__GAME__SPACE_FIELD__ASTEROID_MASS_MULTIPLIER="100.0"
 
+GR__CORE__GAME__SPACE_FIELD__EXPLOSION_RADIUS="1.5"
+GR__CORE__GAME__SPACE_FIELD__EXPLOSION_MASS="0"
+
 # ------------------------------------------------------------------------------
 # Configs for galaxyraiders.core.game.GameEngine
 # ------------------------------------------------------------------------------
