implement score registrar

--- a/configs.dev.env
+++ b/configs.dev.env
@@ -48,6 +48,13 @@ GR__CORE__GAME__GAME_ENGINE__ASTEROID_PROBABILITY="0.05"
 GR__CORE__GAME__GAME_ENGINE__COEFFICIENT_RESTITUTION="1.0"
 
 # ------------------------------------------------------------------------------
+# Configs for galaxyraiders.core.score
+# ------------------------------------------------------------------------------
+
+GR__CORE__SCORE__SCOREBOARD__FILENAME="src/core/score/Scoreboard.json"
+GR__CORE__SCORE__LEADERBOARD__FILENAME="src/core/score/Leaderboard.json"
+
+# ------------------------------------------------------------------------------
 # Configs for galaxyraiders.adapters.tui.TextUserInterface
 # ------------------------------------------------------------------------------
 
