--- a/configs.dev.env
+++ b/configs.dev.env
@@ -51,8 +51,8 @@ GR__CORE__GAME__GAME_ENGINE__COEFFICIENT_RESTITUTION="1.0"
 # Configs for galaxyraiders.core.score
 # ------------------------------------------------------------------------------
 
-GR__CORE__SCORE__SCOREBOARD__FILENAME="src/core/score/Scoreboard.json"
-GR__CORE__SCORE__LEADERBOARD__FILENAME="src/core/score/Leaderboard.json"
+GR__CORE__SCORE__SCOREBOARD__FILENAME="./src/test/kotlin/galaxyraiders/core/score/Scoreboard.json"
+GR__CORE__SCORE__LEADERBOARD__FILENAME="./src/test/kotlin/galaxyraiders/core/score/Leaderboard.json"
 
 # ------------------------------------------------------------------------------
 # Configs for galaxyraiders.adapters.tui.TextUserInterface
@@ -64,5 +64,5 @@ GR__ADAPTERS__TUI__TEXT_USER_INTERFACE__RESOLUTION="10"
 # Configs for galaxyraiders.adapters.web.WebUserInterface
 # ------------------------------------------------------------------------------
 
-GR__ADAPTERS__WEB__WEB_USER_INTERFACE__PORT="5001"
+GR__ADAPTERS__WEB__WEB_USER_INTERFACE__PORT="5000"
 GR__ADAPTERS__WEB__WEB_USER_INTERFACE__ALLOWED_ORIGINS="*"
